# app-weather-forecaster

./: .gitignore  Dockerfile  MANIFEST.in  README.md  pyproject.toml  setup.py
.github/workflows/: ci.yml
src/azuraforge_weatherapp/: config_schema.py  form_schema.json  pipeline.py
src/azuraforge_weatherapp/config/: weather_forecaster_config.yml
src/azuraforge_weatherapp/debug/: debug_pipeline.py
tools/: run_isolated.py
